--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
   <title>Polysoft IT</title>  
 
+  <meta property="og:title" content="Polysoft IT" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://polysoftit.co.uk/" />
+  <meta property="og:image" content="https://polysoftit.co.uk/images/banner.png" />
+
   <link rel="apple-touch-icon" sizes="180x180" href="public/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="public/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="public/favicon-16x16.png">
