updated opengraph tags

--- a/index.html
+++ b/index.html
@@ -4,12 +4,25 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
-  <title>Polysoft IT</title>  
+  
+  <!-- HTML Meta Tags -->
+  <title>Polysoft IT</title>
+  <meta name="description" content="">
 
-  <meta property="og:title" content="Polysoft IT" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://polysoftit.co.uk/" />
-  <meta property="og:image" content="https://polysoftit.co.uk/images/banner.png" />
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://polysoftit.co.uk/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Polysoft IT">
+  <meta property="og:description" content="">
+  <meta property="og:image" content="https://polysoftit.co.uk/images/banner.png">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="polysoftit.co.uk">
+  <meta property="twitter:url" content="https://polysoftit.co.uk/">
+  <meta name="twitter:title" content="Polysoft IT">
+  <meta name="twitter:description" content="">
+  <meta name="twitter:image" content="https://polysoftit.co.uk/images/banner.png">
 
   <link rel="apple-touch-icon" sizes="180x180" href="public/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="public/favicon-32x32.png">
