added irisc image and changed email

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
               <div ref="contact" class="col-lg-10 offset-lg-1 mb-4">
                 <h2>Contact</h2>
                 Rory Pinkney
-                <div>email: polysoftit@gmail.com</div>
+                <div>email: rory@polysoftit.co.uk</div>
                 <div>mobile: +44 7763 278830 </div>
                 <div class="ml-1 mt-3">
                   <b-icon @click="followLink('https://github.com/rtybanana/')" class="clickable mr-1" icon="github" scale="1.5"></b-icon>
