--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   
   <!-- HTML Meta Tags -->
   <title>Polysoft IT</title>
-  <meta name="description" content="">
+  <meta name="description" content="Professional freelance/contract full stack software development services.">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://polysoftit.co.uk/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Polysoft IT">
-  <meta property="og:description" content="">
+  <meta property="og:description" content="Professional freelance/contract full stack software development services.">
   <meta property="og:image" content="https://polysoftit.co.uk/images/banner.png">
 
   <!-- Twitter Meta Tags -->
@@ -21,7 +21,7 @@
   <meta property="twitter:domain" content="polysoftit.co.uk">
   <meta property="twitter:url" content="https://polysoftit.co.uk/">
   <meta name="twitter:title" content="Polysoft IT">
-  <meta name="twitter:description" content="">
+  <meta name="twitter:description" content="Professional freelance/contract full stack software development services.">
   <meta name="twitter:image" content="https://polysoftit.co.uk/images/banner.png">
 
   <link rel="apple-touch-icon" sizes="180x180" href="public/apple-touch-icon.png">
